--- a/css/form.css
+++ b/css/form.css
@@ -60,6 +60,7 @@ form .input-wrapper input {
   background: transparent;
   outline: none;
   /* direction: rtl; */
+  color: white;
   transition: 0.5s ease-in-out;
 }
 
