--- a/movie.css
+++ b/movie.css
@@ -234,7 +234,7 @@ margin: 2px;
   justify-content: space-evenly;
   padding: 20px;
   background-color: #000000;
-  margin-bottom: 20vh;
+  margin: 5vh 0;
 }
 
 .movie-card {
@@ -248,7 +248,7 @@ margin: 2px;
 
 .movie-card img {
   width: 100%;
-  height: 200px;
+  height: 400px;
   object-fit: cover;
 }
 
@@ -329,6 +329,11 @@ nav .menu-nac {
   height: 300px;
 }
 
+button.next-btn, .prev-btn{
+  color: #fff;
+  background : black;
+  border: none;
+}
 
 @media  (max-width:768px) {
   #movie_info {
@@ -362,7 +367,7 @@ nav .menu-nac {
 .footer {
   position: relative;
   width: 94.7%;
-  background: #fff;
+  background: #000000;
   min-height: 100px;
   padding: 20px 50px;
   display: flex;
@@ -385,7 +390,7 @@ nav .menu-nac {
 .social-icon__item,
 .menu__item {
   list-style: none;
-  filter: brightness(0);
+
 }
 
 .social-icon__link {
@@ -415,51 +420,11 @@ nav .menu-nac {
 }
 
 .footer p {
-  color: #000;
+  color: #ffffff;
   margin: 15px 0 10px 0;
   font-size: 1rem;
   font-weight: 300;
 }
-
-.wave {
-  position: absolute;
-  top: -100px;
-  left: 0;
-  width: 100%;
-  height: 100px;
-  background: url("https://i.ibb.co/wQZVxxk/wave.png");
-  background-size: 1000px 100px;
-  filter: brightness(5);
-}
-
-.wave#wave1 {
-  z-index: 1000;
-  opacity: 1;
-  bottom: 0;
-  animation: animateWaves 4s linear infinite;
-}
-
-.wave#wave2 {
-  z-index: 999;
-  opacity: 0.5;
-  bottom: 10px;
-  animation: animate 4s linear infinite !important;
-}
-
-.wave#wave3 {
-  z-index: 1000;
-  opacity: 0.2;
-  bottom: 15px;
-  animation: animateWaves 3s linear infinite;
-}
-
-.wave#wave4 {
-  z-index: 999;
-  opacity: 0.7;
-  bottom: 20px;
-  animation: animate 3s linear infinite;
-}
-
 
 @keyframes animateWaves {
   0% {
