--- a/movie.css
+++ b/movie.css
@@ -234,7 +234,7 @@ margin: 2px;
   justify-content: space-evenly;
   padding: 20px;
   background-color: #000000;
-  margin: 5vh 0;
+  margin: 5vh 10vh;
 }
 
 .movie-card {
@@ -317,13 +317,14 @@ nav .menu-nac {
 }
 
 .carousel img{
-  height: 30vh;
+
   width: 100%;
   object-fit: cover;
   filter: brightness(0.5);
 }
 .carousel{
-  display: flex;
+  position: relative;
+  margin: 5vh 0;
 }
 .carousel-item .hidden-text {
   overflow: hidden;
@@ -331,13 +332,25 @@ nav .menu-nac {
   transition: max-height 0.5s ease-out;
 }
 .carousel img{
-  height: 300px;
+  height: 600px;
 }
 
 button.next-btn, .prev-btn{
   color: #fff;
   background : black;
   border: none;
+  position: absolute;
+  bottom: 0;
+  font-size: 2rem;
+}
+
+.next-btn{
+  right: 0;
+  
+  
+}
+.prev-btn{
+  left: 0;
 }
 
 @media  (max-width:768px) {
