--- a/movie.css
+++ b/movie.css
@@ -315,7 +315,16 @@ nav .menu-nac {
   background: #ffffff;
   color: rgb(0, 0, 0);
 }
+.carousel-item{
+  transition: opacity 0.5s ease-in-out; 
+}
 
+.carousel-item.block {
+  display: block;
+}
+.carousel-item.none {
+  display: none;
+}
 .carousel img{
 
   width: 100%;
@@ -398,10 +407,10 @@ button.next-btn, .prev-btn{
 .menu {
   position: relative;
   display: flex;
- 
   align-items: center;
   margin: 10px 0;
   flex-wrap: wrap;
+  padding: 0;
 }
 
 
